# Rusty-SSR

./: .gitattributes  .gitignore  BENCHMARK.md  Cargo.toml  LICENSE  README.md  RESULTS.md  benchmark-optimized.sh  benchmark.sh  build-ssr-bundle.js  ssr-bundle-embedded.js
benches/: cache_benchmark.rs  ssr_benchmark.rs
config/: .env.production  .env.production.example
examples/: basic.rs  build-preact-bundle.js  loadtest.rs
examples/bundles/: minimal.js  preact.js  react.js  solid.js  vue.js
scripts/: build-bundle.js
src/: config.rs  engine.rs  enndel_core_brotli.rs  enndel_core_config.rs  enndel_core_state.rs  error.rs  lib.rs  main.rs
src/cache/: cold.rs  hot.rs  mod.rs  padded.rs  ssr.rs  utils.rs
src/enndel_core_cache/: cache_utils.rs  cold_cache.rs  hot_cache.rs  mod.rs  product_cache.rs  ssr_cache.rs
src/enndel_core_handlers/: api_proxy.rs  cache_admin.rs  lazy_images.rs  metrics.rs  mod.rs  ssr.rs
src/enndel_core_v8pool/: README.md  adaptive_pool.rs  bundle.rs  mod.rs  renderer.rs  runtime.rs
src/middleware/: brotli.rs  mod.rs
src/v8_pool/: bundle.rs  mod.rs  pool.rs  renderer.rs  runtime.rs
tests/: integration_tests.rs
