[package]
name = "enddel-server"
version = "0.1.0"
edition = "2021"
authors = ["Enddel Team"]
description = "High-performance SSR server for Preact with V8 isolate pool"

# Оптимизации для production
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "compression-br", "trace"] }

# Deno V8 integration
deno_core = "0.322"
serde_v8 = "0.231"

# HTTP client for API proxy
reqwest = { version = "0.12", features = ["json"] }

# Compression
brotli = "7.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tracing/logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Async utilities
futures = "0.3"

# System info
num_cpus = "1.16"

# Thread-local storage
thread_local = "1.1"

# Concurrent HashMap for cache
dashmap = "6.1"
parking_lot = "0.12"
